# fragolaSDK

./: .gitignore  README.md  agent.index.ts  build.ts  bun.lockb  bunfig.toml  esbuild.aliasSrcPlugin.js  fragola.index.ts  hook.presets.index.ts  htpasswd  index.ts  indexTwo.ts  main.ts  mcpSpec.md  otel-traces.jsonl  package-lock.json  package.json  store.index.ts  test-string-schema.ts  testA2ui.ts  testHook.ts  testMcp.ts  testOrchestration.ts  testTelemetry.ts  tracingSpec.md  tsconfig.build.json  tsconfig.json  v0.1-todo.md  v1.todo.md  vercel.json  verdaccio.config.yaml  vitest.config.ts
a2ui_restaurants/: gen...3}]-1cozY9h9cuSHJBhZq0_76.json  gen...3}]-F3Ux9vmdn2RkXeXnQUdTE.json  gen...3}]-ebxCA7ghJvSDFkCaAPUsE.json  gen...3}]-k-EQJfICTcxIjr3R5Vmcd.json  gen...3}]-r4Mx-75A-64fpSw5BjqLR.json  gen...3}].json  tool_calls_arguments.json
docs/: agents.mdx  docV1.md  docusaurus.config.ts  mdx-components.tsx  middleware.ts  next.config.mjs  package-lock.json  package.json  sidebars.ts  tsconfig.json
fragola/: agent.ts  event.ts  eventAfter.ts  eventBefore.ts  eventDefault.ts  exceptions.ts  fragola.ts  stateUtils.ts  store.ts  types.ts  utils.ts
hook.presets/skills/tests/data/skills/organize-ml-workspace/templates/: .gitignore  experiment.py  pyproject.toml  src___init__.py  src_data.py  src_evaluate.py  src_features.py  src_pipeline.py
mcp_conv/: add...pse.json  can...e ?-2oJ7Yc3QEMj2vYOqwgp39.json  can...e ?-51F1qq8FoFjmY0SxfJnh0.json  can...e ?-5CkW_8k0i-GVRLTtlskUI.json  can...e ?-XjSMJOa6zw3IshJ4UN5jI.json  can...e ?-b-vxvxKysv3dCcMw1zNes.json  can...e ?.json  (+3 more)
(+333 files in other folders)
